Soft upgrade to Java 17 (just java version, not dependencies). Added Roll20Builder to split the PokemonRoll20 object from the large amount of conversion logic and allow for setting conversion options. Added 3 more stat generation algorithms for more stat diversity when generating Pokemon. These may be combined into one function with additional logic from settings flags later. Added generating Abilities as Moves for R20 sheets so all usable features of the Pokemon can be in one spot. Upgraded Pokemon generation so their names / forms can be used instead of just dex numbers. Added additional TODO flags to split things that should be done before a release from future features.